--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,8 +10,8 @@
 @tailwind utilities;
 
 
-nav{
-    @apply p-0.25 w-full shadow-2xl bg-blend-color bg-blue-950 fixed top-0 z-50 border-2 border-b-white rounded-b-xl
+.this-nav{
+    @apply p-0.25 w-full shadow-2xl bg-blend-color bg-blue-950 fixed top-0 z-50 rounded-b-xl
 }
 
 ul{
@@ -63,11 +63,11 @@ input, select{
 }
 
 .news{
-    @apply w-full bg-gray-100 px-6 py-4 rounded-xl border-b-4 border-r-4 border-b-gray-400 border-r-gray-400 shadow-md hover:scale-105 transition-transform duration-300
+    @apply w-full px-6 py-4 rounded-xl border-b-4 border-r-4 border-b-gray-400 border-r-gray-400 shadow-md hover:scale-105 transition-transform duration-300
 }
 
 .listDiv{
-    @apply w-full flex flex-wrap items-center justify-between bg-gray-100 px-6 py-4 rounded-xl shadow-md border-b-4 border-r-4 border-b-gray-400 border-r-gray-400 hover:shadow-lg transition-shadow duration-300
+    @apply w-full flex flex-wrap items-center justify-between px-6 py-4 rounded-xl shadow-md border-b-4 border-r-4 border-b-gray-400 border-r-gray-400 hover:shadow-lg transition-shadow duration-300
 }
 
 .div-des{
@@ -91,7 +91,7 @@ input, select{
 }
 
 .info-btn{
-    @apply bg-blue-950 hover:bg-white hover:text-black text-white px-4 py-2 rounded-lg transition mt-2 sm:mt-0
+    @apply bg-blue-950 hover:bg-blue-700 hover:scale-105 transition-all duration-300 text-white px-4 py-2 rounded-lg mt-2 sm:mt-0
 }
 
 .bg-carousel {
@@ -114,6 +114,26 @@ input, select{
 
 .time-proker{
     @apply font-semibold text-center text-gray-500
+}
+
+.gradient-box{
+    @apply bg-gradient-to-b from-white to-blue-50
+}
+
+.big-text{
+    @apply rounded-2xl p-8 shadow-md border-b-4 border-r-4 border-b-gray-400 border-r-gray-400 m-16 mt-4
+}
+
+.info-text{
+    @apply max-w-6xl w-full rounded-lg p-6 sm:p-8 shadow-lg bg-gradient-to-t from-white to-blue-50
+}
+
+.info-text p{
+    @apply text-justify
+}
+
+.info-text img{
+    @apply justify-self-center max-w-2xl
 }
 
 /* * {
